--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@
 Author: Michael Mathews 2020
 */
 
+/**************
+* General
+**************/
 html, body {
     margin: 0;
     padding: 0;
@@ -14,16 +17,46 @@ td, th {
   background-color: #cccccc;
   padding: 4px;
 }
-#items_table {
-  border: 1px dotted blue;
-}
-#items_table h2 {
-  margin-top: 0px;
-}
 label {
   vertical-align: top;
+}
+input[type=text] {
+  max-width: 25%;
+}
+td {
+  text-align: center;
+}
+/**************
+* ID
+**************/
+#items_table {
+  /*border: 1px dotted blue;*/
+  margin-left: 30px;
+}
+#items_table h2 {
+  margin-top: 15px;
 }
 #formFormat {
   margin-top: 20px;
   padding-left: 10px;
+}
+#clean {
+  margin-left: 100px;
+  margin-top: 15px;
+  background-color: lightblue;
+}
+/**************
+* Classes
+**************/
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  box-sizing: border-box;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+  box-sizing: border-box;
 }
