--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ Author: Michael Mathews 2020
 html, body {
     margin: 0;
     padding: 0;
+    /* Animation background change*/
+    -webkit-animation: bgcolor 20s infinite;
+    animation: bgcolor 10s infinite;
+    -webkit-animation-direction: alternate;
+    animation-direction: alternate
+    /* end of animation backgorund change*/
   }
   canvas {
     display: block;
@@ -59,4 +65,29 @@ td {
   display: table;
   clear: both;
   box-sizing: border-box;
+}
+
+/**************
+* Animation + FUN
+**************/
+@keyframes bgcolor {
+  0% {
+      background-color: #45a3e5
+  }
+
+  30% {
+      background-color: #66bf39
+  }
+
+  60% {
+      background-color: #eb670f
+  }
+
+  90% {
+      background-color: #f35
+  }
+
+  100% {
+      background-color: #864cbf
+  }
 }
